--- a/html/512_mini_quiz.html
+++ b/html/512_mini_quiz.html
@@ -84,6 +84,90 @@
 							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
 						</div>
 					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
+					<div class="reply_box">
+						<span class="thumb"><img src="../images/img_thumb2.png" alt=""></span>
+						<div class="info">
+							<strong>유미현</strong>
+							<p class="text">오랜만에 올리셨네요! 너무 예뻐요 ♥♥♥</p>
+						</div>
+					</div>
 				</div>
 
 			</div>
